[package]
name = "picture_organizer"
version = "0.1.0"
authors = ["HyegeunCho <hgcho84.kr@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.24"
futures = "0.3"
image = "^0.24.6"
kamadak-exif = "0.5.5"
#rexiv2 = "0.10.0"